--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -2,7 +2,7 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/nav_graph"
-    app:startDestination="@+id/nav_home">
+    app:startDestination="@id/nav_home">
 
     <include app:graph="@navigation/nav_home" />
     <include app:graph="@navigation/nav_detail" />
