--- a/features/home/src/main/res/layout/fragment_home.xml
+++ b/features/home/src/main/res/layout/fragment_home.xml
@@ -3,8 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/cardview_dark_background"
-    tools:context=".presentation.HomeFragment">
+    android:background="@color/cardview_dark_background">
 
     <!-- TODO: Update blank fragment layout -->
 
