--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".home.presentation.MainActivity">
+    tools:context="com.pvthiendeveloper.coinprice.presentation.MainActivity">
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/navigation_view"
