--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -2,8 +2,9 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/nav_home">
+    app:startDestination="@id/nav_sign_up">
 
     <include app:graph="@navigation/nav_home" />
     <include app:graph="@navigation/nav_detail" />
+    <include app:graph="@navigation/nav_sign_up" />
 </navigation>
