--- a/core/ui/src/main/res/values/type.xml
+++ b/core/ui/src/main/res/values/type.xml
@@ -44,10 +44,45 @@
         <item name="android:textSize">@dimen/font_small</item>
     </style>
 
-    <style name="TextAppearance.CoinPrice.Button" parent="TextAppearance.MaterialComponents.Button">
-        <item name="fontFamily">@font/os_bold</item>
-        <item name="android:textSize">@dimen/font_small</item>
-        <item name="android:textAllCaps">true</item>
-        <item name="android:letterSpacing">0.175</item>
+    <!-- Text input style -->
+    <style name="CoinPrice.TextInputLayout.Filled" parent="ThemeOverlay.Material3.TextInputEditText">
+        <item name="shapeAppearance">@null</item>
+        <item name="boxStrokeWidth">0dp</item>
+        <item name="boxStrokeWidthFocused">0dp</item>
+        <item name="boxBackgroundColor">@android:color/transparent</item>
     </style>
+
+    <style name="CoinPrice.TextInputLayout.Filled.Primary" parent="CoinPrice.TextInputLayout.Filled">
+        <item name="android:textColorHint">@color/white</item>
+        <item name="hintTextColor">@color/white</item>
+    </style>
+
+    <style name="CoinPrice.TextInput.Filled" parent="ThemeOverlay.Material3.TextInputEditText">
+        <item name="fontFamily">@font/os_regular</item>
+        <item name="android:textSize">@dimen/font_normal</item>
+        <item name="android:background">@android:color/transparent</item>
+    </style>
+
+    <style name="CoinPrice.TextInput.Filled.Primary" parent="CoinPrice.TextInput.Filled">
+        <item name="android:textColor">@color/white</item>
+    </style>
+    <!-- End text input style -->
+
+    <!-- Button style -->
+    <style name="CoinPrice.Button.Contained" parent="Widget.Material3.Button">
+        <item name="fontFamily">@font/os_bold</item>
+        <item name="android:textSize">@dimen/font_normal</item>
+        <item name="android:textAllCaps">false</item>
+    </style>
+
+    <style name="CoinPrice.Button.Contained.Primary" parent="CoinPrice.Button.Contained">
+        <item name="android:textColor">@color/white</item>
+        <item name="backgroundTint">@color/mirage</item>
+    </style>
+
+    <style name="CoinPrice.Button.Contained.Madang" parent="CoinPrice.Button.Contained">
+        <item name="android:textColor">@color/white</item>
+        <item name="backgroundTint">@color/madang</item>
+    </style>
+    <!-- End button style -->
 </resources>
